cluster/apps/default/sonarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  ports:
    - port: 8989
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sonarr
